--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossbeam-utils = "0.8"
+nix = { version = "0.27", features = ["fs", "mman"] }
